--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
-  }
+  },
+  "main": "index.js",
+  "author": "Raazeshp96 <raazeshp96@gmail.com>",
+  "license": "MIT"
 }
